--- a/style.css
+++ b/style.css
@@ -1,113 +1,17 @@
-body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color:  #28282B ;
+/* Add custom styles here */
+.card {
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.3s ease;
 }
 
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 1em;
-    text-align: center;
+.card:hover {
+    transform: translateY(-5px);
+}
+.zoom-effect {
+    transition: transform 0.3s ease;
 }
 
-nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
+.zoom-effect:hover {
+    transform: scale(1.05);
 }
-
-nav li {
-    margin-right: 20px;
-}
-
-nav a {
-    color: #fff;
-    text-decoration: none;
-}
-
-.hero {
-    background-image: linear-gradient(to bottom, #333, #444);
-    background-size: 100% 300px;
-    background-position: 0% 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: #fff;
-}
-
-.hero-content {
-    width: 50%;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.hero-image {
-    width: 50%;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.hero-image img {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-}
-
-.courses {
-    padding: 2em;
-}
-
-.course-slider {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.course-card {
-    margin: 20px;
-    padding: 20px;
-    border: 1px solid #ddd;
-    border-radius: 10px;
-    width: 300px;
-}
-
-.course-card img {
-    width: 100%;
-    height: 150px;
-    object-fit: cover;
-    border-radius: 10px 10px 0 0;
-}
-
-.success-stories {
-    padding: 2em;
-}
-
-.story-slider {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.story-card {
-    margin: 1rem; /* Adjust the margin value as needed */
-  }
-  
-  .company-logo {
-    display: inline-block;
-    transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out; /* Combine transitions */
-}
-
-.company-logo:hover {
-    transform: scale(1.1);
-    opacity: 0.8; /* Apply opacity change on the parent to ensure smooth transition */
-  }
-  
-  .company-logo img {
-    display: block; /* Ensures the image inside the company logo behaves properly */
-  }
-  
